minor naming changes

--- a/templates/request_email.html
+++ b/templates/request_email.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="request_email-container">
-        <h2>Enter E-mail</h2>
+        <h2>Registered E-mail</h2>
         <form id="requestEmailForm">
             <input type="email" id="email" placeholder="E-mail Address" required>
             <button type="submit">Submit</button>
