--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
-            <input type="email" id="email" placeholder="Email Address" required>
+            <input type="email" id="email" placeholder="E-mail Address" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
             <div class="links">
