--- a/templates/signup.html
+++ b/templates/signup.html
@@ -53,7 +53,7 @@
     <div class="signup-container">
         <h2>Sign Up</h2>
         <form id="signupForm">
-            <input type="email" id="email" placeholder="Email Address" required>
+            <input type="email" id="email" placeholder="E-mail Address" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="password-re" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
