--- a/templates/main.html
+++ b/templates/main.html
@@ -41,10 +41,10 @@
             padding: 0.5rem;
             background-color: #d9534f;
             text-decoration: none;
-            font-size: 0.9rem;
+            font-size: 1.2rem;
             border-radius: 0.25rem;
             display: block;
-            margin-top: 29rem;
+            margin-top: 46rem;
         }
         .sidebar .logout:hover {
             background-color: #c9302c;
@@ -65,18 +65,20 @@
             padding: 1rem;
             margin-bottom: 1rem;
             width: 100%;
+            height: 100%;
         }
         .symbol-add-container {
-            border: 1px solid #ccc;
+            border: 0.01rem solid #ccc;
             border-radius: 0.5rem;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
             padding: 1rem;
+            height: 35rem;
         }
         .symbol-add-container h3 {
             text-align: center;
             margin: 0 0 1rem 0;
             font-size: 1.6rem;
-            border: 1px solid #ccc;
+            border: 0.01rem solid #ccc;
             border-radius: 0.5rem;
         }
         .symbol-input-container {
@@ -88,11 +90,13 @@
         .symbol-input {
             display: flex;
             align-items: center;
-            border: 1px solid #ccc;
-            border-radius: 0.25rem;
+            border: 0.01rem solid #ccc;
+            border-radius: 0.2rem;
             flex: 1;
-            margin-right: 0.5rem;
+            margin-right: 0.1rem;
+            margin-left: 0.1rem;
             max-width: 100%;
+            max-height: 100%;
         }
         .symbol-input input {
             border: none;
@@ -102,10 +106,10 @@
             font-size: 1.2rem;
         }
         .symbol-input button {
-            padding: 0.3rem 0.6rem;
+            padding: 0.35rem 0.65rem;
             background-color: #28a745;
             border: none;
-            border-radius: 0.25rem;
+            border-radius: 0.20rem;
             color: white;
             font-size: 0.8rem;
             cursor: pointer;
@@ -119,8 +123,8 @@
             content: '+';
             font-size: 2rem;
             display: inline-block;
-            transform: scale(1.2);
-            transform-origin: center;
+            transform: scale(1.35);
+            transform-origin: bottom;
         }
         .symbol-input button:hover {
             background-color: #218838;
@@ -129,7 +133,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 300px;
+            height: 25rem;
             overflow-y: auto;
             padding: 0.5rem;
             box-sizing: border-box;
@@ -139,7 +143,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0.5rem;
-            border: 1px solid #ddd;
+            border: 0.01rem solid #ddd;
             margin-bottom: 0.5rem;
             border-radius: 0.25rem;
             cursor: pointer;
@@ -173,32 +177,33 @@
             background-color: #c82333;
         }
         .plot-container {
-            border: 1px solid #ccc;
+            border: 0.05rem solid #ccc;
             border-radius: 0.25rem;
-            height: 450px;
+            height: 35rem;
         }
         .bottom-container {
-            margin-top: 0.5rem;
+            margin-top: 1rem;
         }
         .options-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
         }
         .options-container select {
             text-align: center;
-            padding: 0.75rem;
+            text-align-last: center; /* For most modern browsers */
+            padding: 0.6rem;
             border-radius: 0.25rem;
-            border: 1px solid #ccc;
-            font-size: 1.25rem;
+            border: 0.1rem solid #ccc;
+            font-size: 1.4rem;
             margin-bottom: 1.25rem;
             width: 100%;
         }
         .predict-button-container {
             display: flex;
             justify-content: center;
-            margin-top: 6.5rem;
+            margin-top: 17rem;
         }
         .predict-button-container button {
             padding: 0.75rem 1.5rem;
